--- a/css/Slider.css
+++ b/css/Slider.css
@@ -224,3 +224,12 @@ body{
     left: -10%;
   }
 }
+@media(max-width: 700px){
+  .slideshow-container,.myslides .fade{
+    width:100% ;
+  
+  }
+  img{
+    width: 500px;
+  }
+ }
